--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,100;1,900&family=Yuji+Boku&family=Yuji+Mai&display=swap');
 
 h1 {
-    font-family: 'Poppins', "Times New Roman",sans-serif;
+    font-family: 'Poppins', 'Roboto',sans-serif;
     font-size: 35px;
-    color: rebeccapurple;
+    color:#865B9A;
     font-weight: 500;
     text-decoration: underline;
     text-align: center;
@@ -13,13 +12,13 @@ h2 {
     font-family: 'Poppins';
     font-size: 25px;
     font-weight: 300;
-    color: rebeccapurple;
+    color:#865B9A;
     text-transform: uppercase;
     text-align: center;
 }
 main{
     color:#535865;
-    font-family: 'Poppins', "Times New Roman", sans-serif;
+    font-family: 'Poppins', 'Roboto', sans-serif;
     font-weight: bold;
     font-size: 15px;
 }
@@ -35,8 +34,15 @@ body {
     font-family: 'Poppins', "Times New Roman", sans-serif;
     color: #535865;
     font-style: normal;
+
+}
+p {
+    background-color: blue;
 }
 
+.last-paragraph {
+    background-color: green;
+}
 h3 {
     color: rebeccapurple;
 }
@@ -48,5 +54,6 @@ ul {
 button {
     color: white;
     background-color: rebeccapurple;
+    font-size: 24px;
 }
 
